# app/Http/Controllers/TeacherController.php
@@ -677,7 +677,45 @@ class TeacherController extends Controller
       ]
     ], 200);
   }
-
+/**
+   *
+   *
+   * @param \App\Models\Teacher $Teacher
+   * @return \Illuminate\Http\Response
+   */
+  /**
+   * @OA\Post(
+   *    path="/api/teachers/generate-system-users",
+   *    operationId="Generate users for teachers witout users",
+   *    tags={"Teachers"},
+   * security={{"bearer_token":{}}},
+   *    summary="Generate users for teachers witout users",
+   *    description="Generate users for teachers witout users",
+   *    @OA\Response(
+   *      response=200,
+   *      description="Success",
+   *      @OA\MediaType(
+   *        mediaType="application/pdf",
+   *      )
+   *    ),
+   *    @OA\Response(
+   *      response=401,
+   *      description="Unauthenticated",
+   *    ),
+   *    @OA\Response(
+   *      response=403,
+   *      description="Forbidden",
+   *    ),
+   *    @OA\Response(
+   *      response=400,
+   *      description="Bad Request"
+   *    ),
+   *    @OA\Response(
+   *      response=404,
+   *      description="Not Found"
+   *    )
+   *  )
+   */
   public function generateSystemUsers(Request $request)
   {
     return $this->TeacherManagerService->generateSystemUsers();
